--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
           <div class="col-md-6 content">
             <p>
-              My name is Jisoo Noh, I graduated from University of North Carolina at Greensboro with Business Administration degree. I have been working as an account executive in various fields, such as, telecommuication, financial and building supply industry. I decided to join the UNC coding bootcamp to change my career path. I'm very new to coding but is highly motivated and dedicated to learn. I enjoy meeting new people, finding ways to have fun and building relationships. I love playing and watching sports, recently have joined an ice hocky team. People find me to be an upbeat, self-motivated team player, I truly believe team work makes dream work. I am very much looking forward to working with everyone in the class.
+              My name is Ji-Soo Noh, I graduated from University of North Carolina at Greensboro with Business Administration degree. I have been working as an account executive in various fields, such as, telecommuication, financial and building supply industry. I decided to join the UNC coding bootcamp to change my career path. I'm very new to coding but is highly motivated and dedicated to learn. I enjoy meeting new people, finding ways to have fun and building relationships. I love playing and watching sports, recently have joined an ice hocky team. People find me to be an upbeat, self-motivated team player, I truly believe team work makes dream work. I am very much looking forward to working with everyone in the class.
             </p>
           </div>
         </div>
